- Reldens - v4.0.0 - Fix inset and margin issue that caused horizontal scroll in Chrome.

--- a/theme/default/css/wooden-ui.scss
+++ b/theme/default/css/wooden-ui.scss
@@ -18,15 +18,18 @@
     &::before {
         content: "";
         position: absolute;
-        inset: -11px;
-        pointer-events: none;
-        background:
-            url('../assets/game-ui/corner.png') top left no-repeat,
-            url('../assets/game-ui/corner.png') top right no-repeat,
-            url('../assets/game-ui/corner.png') bottom left no-repeat,
-            url('../assets/game-ui/corner.png') bottom right no-repeat;
-        background-size: 24px;
         z-index: 10;
+        inset: 0;
+        background-image:
+            url('../assets/game-ui/corner.png'),
+            url('../assets/game-ui/corner.png'),
+            url('../assets/game-ui/corner.png'),
+            url('../assets/game-ui/corner.png');
+        background-position: 0 0, 100% 0, 0 100%, 100% 100%;
+        background-repeat: no-repeat;
+        background-size: 24px;
+        margin: -10px;
+        pointer-events: none;
     }
 
     .box-close {
